# IPMSM

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  train_model.py
aime_xai/: __init__.py  core.py
notebook/: AIME_for_ImageData (2).ipynb  EM_AIME.ipynb  EM_AIME_Gray.ipynb  RGB_to_Glay.ipynb
